samples/_failures_safe/1761328201_3910d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07230aa6.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_07230aa6.c:173:9: error: expected declaration or statement at end of input
  173 |         case TOKEN_EOF: return "EOF";
      |         ^~~~
./samples/SAFE/__tmp_07230aa6.c:173:9: error: expected declaration or statement at end of input
